setup[mongoose]: mongoose singleton connection and user base repo
